2021/07/27 Visenri

    * src/pdk/gen.c
      support/regression/tests/getbyte_param.c
      Fix bug #3269.
      Add test for it.

2021/07/26 Visenri

    * support/regression/Makefile.in
      support/regression/ports/pdk13
      support/regression/ports/pdk13/spec.mk
      support/regression/ports/pdk13/support.c
      support/regression/ports/pdk13/uCsim.cmd
      Added infrastructure to test pdk13.
      It is in the filter-out list to avoid automatic test, because many tests still need some work to be passed/skipped [#394].

2021/07/26 Visenri

    * support/regression/fwk/include/testfwk.h
      support/regression/fwk/lib/testfwk.c
      Lightweight version of test framework (testfwk) [#393].
      Added new macro to indicate we are targeting a very low memory device: TARGET_VERY_LOW_MEMORY.
      Added macros to easy the check of all pdk variants with 1 or 2 checks [#394].
      Different implementation of __printd with hex output (for TARGET_VERY_LOW_MEMORY).
      Skipped some strings in "Summary" output to save memory (for TARGET_VERY_LOW_MEMORY).

2021/07/26 Visenri

    * support/regression/collate-results.py
      support/regression/compact-results.py
      Added processing for the stack overflow message from simulator.
      Added new check to reset state machine and name with "Simulation started" string
      Added checks to validate the name after "--- Running", because sometimes we get garbage, because of caotic program behavior (due to stack overflow or wrong code).
      Added the possibility to parse hex values instead of decimal [#393].
      Better output in case of a catastrophic failure ("--- Summary" not found).
      Fixed wrong regular expression to find ".ihx" file.

2021/07/26 Visenri

    * sdas/aspdk13/pdk13mch.c
      sdas/aspdk13/pdk13pst.c
      sdas/aspdk14/pdk14mch.c
      sdas/aspdk14/pdk14pst.c
      sdas/aspdk15/pdk15mch.c
      sdas/aspdk15/pdk15pst.c
      sdas/aspdk16/pdk16mch.c
      sdas/aspdk16/pdk16pst.c